fix: footer language option getting out of screen

--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -57,7 +57,7 @@
     align-items: center;
     gap: 2rem;
 
-    @media all and (min-width: 768px) {
+    @media all and (min-width: 800px) {
         flex-direction: row;
         justify-content: space-between;
     }
